# Accounts-Receivable-AI-Agent

./: .gitignore  AccountsReceivable.md  CreditPolicy.txt  README.md  agent.ipynb  dataCheck.ipynb  main.py  pyproject.toml  requirements.txt  scrum.md  steps.md  test_ar_workflow.py
