[project]
name = "accounting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grandalf>=0.8",
    "ipykernel>=6.29.5",
    "langchain>=0.3.24",
    "langchain-community>=0.3.22",
    "langchain-core>=0.3.56",
    "langchain-google-genai>=2.1.3",
    "langchain-google-vertexai>=2.0.21",
    "langgraph>=0.3.34",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "typing>=3.10.0.0",
]
